--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,39 +5,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--===============================================================================================-->
-    <link rel="icon" type="image/png" th:href="@{images/icons/favicon.png}"/>
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" th:href="@{vendor/bootstrap/css/bootstrap.min.css}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" th:href="@{fonts/font-awesome-4.7.0/css/font-awesome.min.css}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" th:href="@{fonts/iconic/css/material-design-iconic-font.min.css}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" th:href="@{fonts/linearicons-v1.0.0/icon-font.min.css}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" th:href="@{vendor/animate/animate.css}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" th:href="@{vendor/css-hamburgers/hamburgers.min.css}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" th:href="@{vendor/animsition/css/animsition.min.css}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" th:href="@{vendor/select2/select2.min.css}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" th:href="@{vendor/daterangepicker/daterangepicker.css}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" th:href="@{vendor/slick/slick.css}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" th:href="@{vendor/MagnificPopup/magnific-popup.css}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" th:href="@{vendor/perfect-scrollbar/perfect-scrollbar.css}">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" th:href="@{css/util.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{css/main.css}">
-    <!--===============================================================================================-->
-    <title>TT / 선생님 중고거래 홈페이지</title>
+    <th:block th:replace="layout/head :: head"></th:block>
+    <title>TT / 교사 중고거래</title>
 </head>
 <body>
+    <!-- header start-->
     <th:block th:replace="layout/header :: header"></th:block>
+    <!-- header end -->
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <!-- footer start -->
+    <th:block th:replace="layout/footer :: footer"></th:block>
+    <!-- footer end -->
 </body>
 </html>
