--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -59,7 +59,7 @@
                                 <a href="index.html">고객센터</a>
                                 <ul class="sub-menu">
                                     <li><a href="index.html">공지사항</a></li>
-                                    <li><a href="home-02.html">FAQ</a></li>
+                                    <li><a th:href="@{/faq/faqList}">FAQ</a></li>
                                     <li><a href="home-03.html">Q&A</a></li>
                                 </ul>
                             </li>
