--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,11 +12,7 @@
     <!-- header start-->
     <th:block th:replace="layout/header :: header"></th:block>
     <!-- header end -->
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <h2>index입니다</h2>
     <!-- footer start -->
     <th:block th:replace="layout/footer :: footer"></th:block>
     <!-- footer end -->
